# cfpgomes.github.io

./: Cargo.toml  index.html  publications-an-empirical-study-on-the-use-of-quantum-computing-for-financial-portfolio-optimization.html  publications-off-the-shelf-components-for-quantum-programming-and-testing.html  publications-portfolio-optimization-in-financial-markets-using-quantum-computing-an-experimental-study.html  register.cmd  sms.html  smspairwise.html  smsquality.html
appx/: AppxManifest.xml
css/: homemade.css  science.css
posts/: cfpf.cfpg  test.gobbet
publications/: bolos.gobbet  position-paper.gobbet  test.gobbet  thesis-paper.gobbet  thesis.gobbet
sms_figures/: individual_D010.html  individual_D020.html  individual_D030.html  individual_D040.html  individual_D050_to_D053.html  individual_D050_to_D053_icicle.html  individual_D050_to_D053_treemap.html  individual_D060.html  individual_D070.html  individual_sr_counts.html  individual_ss00_sr00.html  individual_ss_counts.html  pair_d010_d050.html  pair_d010_d060.html  pair_d010_d070.html  pair_d020_d050.html  pair_d020_d060.html  pair_d020_d070.html  pair_d050_d060.html  pair_d050_d070.html  pair_d070_d060.html  pair_sr00_d010.html  pair_sr00_d020.html  pair_sr00_d030.html  pair_sr00_d040.html  pair_sr00_d050.html  pair_sr00_d060.html  pair_sr00_d070.html  pair_ss00_d010.html  pair_ss00_d020.html  pair_ss00_d030.html  pair_ss00_d040.html  pair_ss00_d050.html  pair_ss00_d060.html  pair_ss00_d070.html  pair_ss03_d040.html  pair_ss03_d050.html  pair_ss03_d060.html  pair_ss03_d070.html  (+8 more)
src/: html.rs  (+2 more)
(+1 files in other folders)
