[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-builder = "0.3.0"

[dependencies.windows]
version = "0.36.1"
features = [
    "alloc",
    "implement",
    "ApplicationModel_Activation",
    "UI_Xaml_Controls",
    "UI_Xaml",
    "Win32_Foundation",
    "Win32_Storage_Packaging_Appx",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
]
