[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-builder = "0.3.0"
chrono = "0.4.19"
comrak = "0.12.1"
rand = "0.8.4"
image = "0.24.3"
image_compressor = "1.2.2"